# cegid_academy_aidapt

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: analise-attrition.md  setup-macos-docker.md
exercicios/: README.md
exercicios/exercicio-1-sql/: README.md  enunciado.md
exercicios/exercicio-1-sql/dados/: Dados.txt  schema.sql  seed.sql
exercicios/exercicio-1-sql/enunciado_original/: AiDAPT_BasesDadosSQL_Exercicios.docx  Dados.txt
exercicios/exercicio-1-sql/exercicios/: ex01_criacao_tabelas.ipynb  ex01_criacao_tabelas.sql  ex02_select_basico.ipynb  ex02_select_basico.sql  ex03_where.ipynb  ex03_where.sql  ex04_group_by_having.ipynb  ex04_group_by_having.sql  ex05_joins.ipynb  ex05_joins.sql  ex06_update.ipynb  ex06_update.sql  ex07_delete.ipynb  ex07_delete.sql  ex08_northwind.ipynb  ex08_northwind.sql  ex09_adventureworks.ipynb  ex09_adventureworks.sql
exercicios/exercicio-1-sql/resolucao_prof/: Exercicio01sql.txt
exercicios/montar-modelo/: MontandoSeuProprioModelo.txt
projetos/projeto-1-ibm-hr/: CHANGELOG.md  INSIGHTS.md  PROGRESS.md  QUESTIONS.md  README.md  analise-attrition.md
projetos/projeto-1-ibm-hr/enunciado/: Notas_Entrevista_Projeto01.docx
projetos/projeto-1-ibm-hr/setup/: setup-windows-ssms.md
projetos/projeto-1-ibm-hr/sql/: 01_schema.ipynb  01_schema.sql  02_import_data.ipynb  02_import_data.sql  03_analise_exploratoria.ipynb  03_analise_exploratoria.sql  04_analise_genero.ipynb  04_analise_genero.sql  05_analise_felicidade.ipynb  05_analise_felicidade.sql  06_analise_envelhecimento.ipynb  06_analise_envelhecimento.sql  (+4 more)
