[project]
name = "cegid-academy"
version = "0.1.0"
description = "Exercicios e Projetos SQL - Programa AiDAPT, Cegid Academy"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupysql>=0.11.1",
    "pymssql>=2.3.11",
    "sqlalchemy>=2.0.46",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
]
